...
            ),
            Obx(
              () {
                return Container(
                  margin: const EdgeInsets.symmetric(horizontal: 24),
                  child: TextField(
                    key: const Key('newPasswordInput'),
                    controller: _passwdController,
                    textAlignVertical: TextAlignVertical.bottom,
                    decoration: InputDecoration(
                      contentPadding: const EdgeInsets.only(bottom: 5),
                      hintText: 'Nova senha',
                      hintStyle: const TextStyle(
...
                valid =
                    RegExp(r'^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$')
                        .hasMatch(_passwdController.text),
                if (!valid)
                  {
                    CustomSnackBar.show(
                        'Verifique as regras para sua senha e tente novamente'),
                  }
                else
                  {
                    Get.toNamed('/ConclusionPassword'),
                  },
              },
...
